# BachelorProject

./: .gitignore  BachelorProject  CMakeLists.txt  CMakeListsNoGUI.txt  README.md  again1.txt  agent.txt  altOp2Kols.txt  attempt1.txt  attempt1same.txt  attempt2.txt  better5.txt  betterattempt2.txt  clearStart1.txt  clearStart2.txt  close.txt  closelong.txt  closenew.txt  complex.txt  corner1goal.txt  corner2goal.txt  corner3goal.txt  corner4goal.txt  corner5.txt  cornersimple.txt  diff1.txt  diff2.txt  diff4.txt  diff6.txt  diff8.txt  easy.txt  good.txt  group1.txt  group1long.txt  group1new.txt  group3long.txt  group4.txt  group4long.txt  group5long.txt  group5new.txt  (+44 more)
attemptedLevels/: again2.txt  again3.txt  (+41 more)
hyperparamGeneration/: 5311seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  BESTTHREEHYPERPARAMFILES.txt  CMakeLists.txt  README.md  bestAfterAgentMLPHyperparamOptimization.txt  bestAgentHyperparamOptimization.txt  bestAgentMLPHyperparameterOptimization.txt  bestByPredOpModelingHyperparameterOptimization.txt  bestExperienceReplayHyperparameterOptimization.txt  bestForThreeNormalSarsaHyperparams.txt  bestForThreeSarsaOpModelingHyperparams.txt  bestHyperparamSettings.txt  bestOpModellingHyperparamOptimization.txt  bestOpponentMLPHyperparameterOptimization.txt  bestSarsaOpOpModeling.txt  finalBestAfterMonteCarloHyperparameterOptimization.txt  finalBestTestToCompare.txt  generateHyperparams.cpp  generateHyperparams.h  hyperparamGeneration  hyperparamSpec.cpp  hyperparamSpec.h  initialHs.txt  main.cpp  newopBestOpModelingHyperparameterOptimization.txt  newopBestOpponentMLPHyperparameterOptimization.txt  opTypes.h  restNewopBestOpponentMLPHyperparameterOptimization.txt  sarsaKolsResults100k.txt  sarsaOneResults100k.txt  sarsaPettitt02ResultsIGuess.txt  testAgent.txt  testOpMlpHyperparameterOptimization.txt
hyperparamGeneration/BESTTHREEHYPERPARAMS/: 1seed_givenRandom_000.txt  1seed_givenRandom_001.txt  2seed_givenRandom_001.txt  3seed_givenRandom_000.txt  3seed_givenRandom_002.txt  4seed_givenRandom_002.txt  6seed_givenRandom_000.txt  6seed_givenRandom_001.txt  7seed_givenRandom_001.txt  7seed_givenRandom_002.txt
hyperparamGeneration/MONTECARLOFINALRESULTS/: slurm-20685723.out  slurm-20685727.out  slurm-20685728.out  slurm-20685729.out  slurm-20685732.out  slurm-20685736.out  slurm-20685737.out  slurm-20685738.out  slurm-20685739.out  slurm-20685740.out  slurm-20685744.out  slurm-20685746.out  slurm-20685747.out  slurm-20685748.out  slurm-20685752.out  slurm-20685754.out  slurm-20685755.out  slurm-20685757.out  slurm-20685761.out  slurm-20685764.out  slurm-20685766.out  slurm-20685768.out  slurm-20685770.out  slurm-20685773.out  slurm-20685774.out  slurm-20685775.out  slurm-20685779.out  slurm-20685781.out  slurm-20685782.out  slurm-20685783.out  slurm-20685784.out  slurm-20685786.out  slurm-20685788.out  slurm-20685789.out  slurm-20685790.out  slurm-20685791.out  slurm-20685793.out  slurm-20685794.out  slurm-20685796.out  slurm-20685797.out  (+582 more)
hyperparamGeneration/MONTECARLORANDOMHYPERPARAMS/: 2seed_givenRandom_000.txt  2seed_givenRandom_111.txt  2seed_givenRandom_120.txt  3seed_givenRandom_020.txt  3seed_givenRandom_022.txt  3seed_givenRandom_102.txt  5seed_givenRandom_100.txt  6seed_givenRandom_111.txt  6seed_givenRandom_120.txt
hyperparamGeneration/allThreeSarsa/: 3seed_givenRandom_001.txt  4seed_givenRandom_000.txt
hyperparamGeneration/bestForThreeSarsaOpModeling/: 0003seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0003seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0010seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0011seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0011seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0012seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0012seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0013seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0101seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0101seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0103seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0110seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0111seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0112seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0112seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0113seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0201seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0202seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0203seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0203seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0210seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0300seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0301seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0302seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0310seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0310seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0311seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0312seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  0313seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  0313seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  1001seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  1001seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  1003seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  1011seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  1012seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  1012seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  1013seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  1013seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  1100seed_pValueThreshold_minHistorySize_maxHistorySize_001.txt  1100seed_pValueThreshold_minHistorySize_maxHistorySize_002.txt  (+193 more)
hyperparamGeneration/bestOpModelling/: 000.txt  101.txt  112.txt  120.txt  122.txt
(+20971 files in other folders)
